# namix-phev-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
include/: transform.h
include/graphics/: mesh.hpp  renderer.hpp  shader.hpp  window.hpp
include/math_utils/: transform.hpp
include/physics/: collision.hpp  collisionUtils.hpp  physicsWorld.hpp  rigidbody.hpp
src/: transform.cpp
src/graphics/: mesh.cpp  renderer.cpp  shader.cpp  window.cpp
src/graphics/shaders/: frag.glsl  vert.glsl
src/math_utils/: transform.cpp
src/physics/: collision.cpp  collisionUtils.cpp  physicsWorld.cpp  rigidbody.cpp
tests/: boxStackingDemo.cpp  collisionDetectionTest.cpp  demo.cpp  rainingBodiesDemo.cpp  singleBodyDemo.cpp
